--- a/Views/Article.cshtml
+++ b/Views/Article.cshtml
@@ -1,4 +1,5 @@
 @using ContentManagementSystem.Models
+@using ContentManagementSystem.Models.ViewModels
 @using Umbraco.Cms.Core.Models
 @using Umbraco.Extensions
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ArticleViewModel>
@@ -7,18 +8,25 @@
 }
 
 
-<a href="/">← Back to Home</a>
+<a href="/" class="back-link">← Back to Home</a>
 
 <article>
     <h1>@Model.Title</h1>
-    <p><em>Written by: @Model.Author</em></p>
+
+    @if (!string.IsNullOrEmpty(Model.Author))
+    {
+        <p><em>Written by: @Model.Author</em></p>
+    }
 
     @if (Model.HeroImage != null)
     {
-        <img src="@Model.HeroImage.MediaUrl()" alt="@Model.Title" style="max-width: 100%; height: auto;" />
+        <img src="@Model.HeroImage.MediaUrl()" alt="@Model.Title"/>
     }
 
-    <div class="content">
-        @Html.Raw(Model.ArticleContent)
-    </div>
+    @if (Model.ArticleContent != null)
+    {
+        <div class="content">
+            @Html.Raw(Model.ArticleContent)
+        </div>
+    }
 </article>
